--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
     android:padding="16dp">
 
     <!-- Premier EditText -->
+    <TextView
+        android:id="@+id/textView"
+        android:textSize="13pt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ajouter un ordinateur"
+        android:layout_marginBottom="16dp"/>
+
     <EditText
         android:id="@+id/ID"
         android:layout_width="200dp"
@@ -42,7 +50,7 @@
        android:id="@+id/withAcc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
-       android:layout_marginBottom="30dp"
+       android:layout_marginBottom="60dp"
        android:text="avec accessoires"
 
        />
@@ -52,7 +60,7 @@
         android:id="@+id/Add"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="30dp"
         android:text="Add"/>
 
     <!-- Deuxième bouton -->
